right cart start

--- a/Pages/product.html
+++ b/Pages/product.html
@@ -891,7 +891,69 @@
                                 <!-- Right Card -->
                                 <div class="right">
                                     <div class="my-card">
+                                        <div>
+                                            <h5 class="my-d-flex my-gap-2"><span><i
+                                                        class="fa-solid fa-truck-fast"></i></span>Delivary Options
+                                            </h5>
+                                            <ul class="my-mt-2 my-flex-column my-gap-1">
+                                                <li class="my-d-flex my-align-center my-gap-2">
+                                                    <i class="fa-solid fa-circle-check"></i>
+                                                    1 to 7 days delivary
+                                                </li>
+                                                <li class="my-d-flex my-align-center my-gap-2">
+                                                    <i class="fa-solid fa-circle-check"></i>
+                                                    Online Delivary
+                                                </li>
+                                            </ul>
 
+                                            <!-- Delivary Charge -->
+                                            <div class="my-mt-4">
+                                                <h5>
+                                                    Delivary Charge :
+                                                </h5>
+                                                <div class="my-pl-2 my-mt-2">
+                                                    <div class="my-d-flex my-align-center my-gap-1 my-mt-1">
+                                                        <i class="fa-solid fa-circle-check"></i>
+                                                        within dhaka <span>60 Taka</span>
+                                                    </div>
+                                                    <div class="my-d-flex my-align-center  my-gap-1 my-mt-1 ">
+                                                        <i class="fa-solid fa-circle-check"></i>
+                                                        outside dhaka <span>100 Taka</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                        <!-- Return And Warrenty -->
+                                        <div class="my-mt-4 return my-flex-column my-gap-1">
+                                            <div>
+                                                <h5>
+                                                    <i class="fa-solid fa-arrow-rotate-left"></i>
+                                                    Return Warrenty
+                                                </h5>
+                                            </div>
+                                            <ul>
+                                                <li class="my-d-flex my-align-center my-gap-2 my-mt-1">
+                                                    <span class="icon">
+                                                        <i class="fa-solid fa-circle-check"></i>
+                                                    </span>
+                                                    <p>Condition New</p>
+                                                </li>
+                                                <li class="my-d-flex my-align-center my-gap-2">
+                                                    <span class="icon">
+                                                        <i class="fa-solid fa-circle-check"></i>
+                                                    </span>
+                                                    <p>7 Days Return</p>
+                                                </li>
+                                                <li class="my-d-flex my-align-center my-gap-2">
+                                                    <span class="icon">
+                                                        <i class="fa-solid fa-circle-xmark"></i>
+                                                    </span>
+                                                    <p>Warrenty Not Available</p>
+                                                </li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
