accodient section added

--- a/index.html
+++ b/index.html
@@ -3376,6 +3376,100 @@
             </section>
 
 
+
+
+
+
+
+            <section class="section-margin ">
+                <div class="my-container">
+
+                    <div class="section-head">
+                        <h2>Common Question</h2>
+                        <p>Check all QA</p>
+                    </div>
+                    <div class="accordion my-my-6">
+
+                        <!-- item -->
+                        <div class="accordion-item">
+                            <h4 class="accordion-header">
+                                Weight
+                                <span class="accordion-icon">▼</span>
+                            </h4>
+                            <div class="accordion-content">
+                                <p>200 gm</p>
+                            </div>
+                        </div>
+
+                        <!-- item -->
+                        <div class="accordion-item">
+                            <h4 class="accordion-header">
+                                Price
+                                <span class="accordion-icon">▼</span>
+                            </h4>
+                            <div class="accordion-content">
+                                <p>Dark Chocolate</p>
+                            </div>
+                        </div>
+                        <!-- item -->
+                        <div class="accordion-item">
+                            <h4 class="accordion-header">
+                                Deals
+                                <span class="accordion-icon">▼</span>
+                            </h4>
+                            <div class="accordion-content">
+                                <p>200 gm</p>
+                            </div>
+                        </div>
+
+                        <!-- item -->
+                        <div class="accordion-item">
+                            <h4 class="accordion-header">
+                                Flavor
+                                <span class="accordion-icon">▼</span>
+                            </h4>
+                            <div class="accordion-content">
+                                <p>Dark Chocolate</p>
+                            </div>
+                        </div>
+
+                        <!-- item -->
+                        <div class="accordion-item">
+                            <h4 class="accordion-header">
+                                Ingredients
+                                <span class="accordion-icon">▼</span>
+                            </h4>
+                            <div class="accordion-content">
+                                <p>Cocoa, Sugar, Milk Solids, Cocoa Butter, Emulsifier (Soy Lecithin)</p>
+                            </div>
+                        </div>
+
+                        <!-- item -->
+                        <div class="accordion-item">
+                            <h4 class="accordion-header">
+                                How to order this?
+                                <span class="accordion-icon">▼</span>
+                            </h4>
+                            <div class="accordion-content">
+                                <p>Cocoa, Sugar, Milk Solids, Cocoa Butter, Emulsifier (Soy Lecithin)</p>
+                            </div>
+                        </div>
+
+                        <!-- item -->
+                        <div class="accordion-item">
+                            <h4 class="accordion-header">
+                                How many day delay for order delivary?
+                                <span class="accordion-icon">▼</span>
+                            </h4>
+                            <div class="accordion-content">
+                                <p>our estimed delivary 1 to 7 days</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
         </main>
 
 
