--- a/test.html
+++ b/test.html
@@ -4,52 +4,144 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Custom Scrollbar</title>
+        <title>Accordion</title>
         <style>
-            body {
-                height: 200vh;
-                /* Add extra height to enable scrolling */
-                margin: 0;
+            .accordion {
+                width: 100%;
+                max-width: 600px;
+                margin: 0 auto;
+                border: 1px solid #ddd;
+                border-radius: 5px;
+                overflow: hidden;
                 font-family: Arial, sans-serif;
             }
 
-            /* WebKit Browsers (Chrome, Edge, Safari) */
-            body::-webkit-scrollbar {
-                width: 12px;
-                /* Width of the scrollbar */
+            .accordion-item {
+                border-bottom: 1px solid #ddd;
             }
 
-            body::-webkit-scrollbar-track {
-                background: #2e2323;
-                /* Background color of the scrollbar track */
+            .accordion-header {
+                padding: 15px;
+                background-color: #f5f5f5;
+                cursor: pointer;
+                font-weight: bold;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                transition: background-color 0.3s, color 0.3s;
             }
 
-            body::-webkit-scrollbar-thumb {
-                background: #007bff;
-                /* Scrollbar thumb (handle) color */
-                border-radius: 10px;
-                /* Rounded corners for the scrollbar thumb */
-                border: 2px solid #693e3e;
-                /* Border around the thumb */
+            .accordion-header:hover {
+                background-color: #eaeaea;
             }
 
-            /* Firefox Scrollbar Styling */
-            body {
-                scrollbar-color: #007bff #f0f0f0;
-                /* Thumb color and track color */
-                scrollbar-width: thin;
-                /* Thin scrollbar */
+            .accordion-header.active {
+                background-color: #007bff;
+                color: #fff;
+            }
+
+            .accordion-content {
+                padding: 0 15px;
+                background-color: #fff;
+                height: 0;
+                /* Start with collapsed height */
+                overflow: hidden;
+                display: block;
+                opacity: 0;
+                transition: height 0.3s ease, opacity 0.3s ease;
+            }
+
+            .accordion-item:last-child {
+                border-bottom: none;
+            }
+
+            .accordion-icon {
+                transition: transform 0.3s ease;
+            }
+
+            .accordion-header.active .accordion-icon {
+                transform: rotate(180deg);
+            }
+
+            .accordion-header.active+.accordion-content {
+                height: auto;
+                opacity: 1;
+            }
+
+            /* Fade-in animation */
+            @keyframes fadeIn {
+                from {
+                    opacity: 0;
+                }
+
+                to {
+                    opacity: 1;
+                }
             }
         </style>
     </head>
 
     <body>
-        <h1>Custom Scrollbar Example</h1>
-        <p>Scroll down to test the custom scrollbar style. The scrollbar thumb color is blue (#007bff), and the track
-            color is light gray (#f0f0f0).</p>
-        <p>To implement this style, you need to use <code>::-webkit-scrollbar</code> for WebKit browsers and
-            <code>scrollbar-color</code> for Firefox.
-        </p>
+        <div class="accordion">
+            <div class="accordion-item">
+                <h4 class="accordion-header">
+                    Weight
+                    <span class="accordion-icon">▼</span>
+                </h4>
+                <div class="accordion-content">
+                    <p>200 gm</p>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h4 class="accordion-header">
+                    Flavor
+                    <span class="accordion-icon">▼</span>
+                </h4>
+                <div class="accordion-content">
+                    <p>Dark Chocolate</p>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h4 class="accordion-header">
+                    Ingredients
+                    <span class="accordion-icon">▼</span>
+                </h4>
+                <div class="accordion-content">
+                    <p>Cocoa, Sugar, Milk Solids, Cocoa Butter, Emulsifier (Soy Lecithin)</p>
+                </div>
+            </div>
+        </div>
+
+        <script>
+            function accordion() {
+                document.querySelectorAll('.accordion-header').forEach(header => {
+                    header.addEventListener('click', () => {
+                        const accordionItem = header.parentElement;
+                        const content = accordionItem.querySelector('.accordion-content');
+                        const isActive = header.classList.contains('active');
+
+                        // Close all other items
+                        document.querySelectorAll('.accordion-header').forEach(h => {
+                            h.classList.remove('active');
+                            h.nextElementSibling.style.height = '0';
+                            h.nextElementSibling.style.opacity = '0';
+                        });
+
+                        // Toggle the current item
+                        if (!isActive) {
+                            header.classList.add('active');
+                            content.style.height = `${content.scrollHeight}px`; // Use scrollHeight to smoothly expand
+                            content.style.opacity = '1';
+                        } else {
+                            header.classList.remove('active');
+                            content.style.height = '0'; // Collapse the section
+                            content.style.opacity = '0';
+                        }
+                    });
+                });
+            }
+
+        </script>
     </body>
 
 </html>
