--- a/test.html
+++ b/test.html
@@ -110,6 +110,296 @@
                     <p>Cocoa, Sugar, Milk Solids, Cocoa Butter, Emulsifier (Soy Lecithin)</p>
                 </div>
             </div>
+
+
+
+
+
+
+
+
+            <div>
+                <div class="tab-buttons my-flex-center my-flex-sm-column  my-gap-0">
+                    <button data-tab="1">
+                        <div>Top Selling </div>
+                    </button>
+                    <button class="active" data-tab="2">
+                        <div>Top Rating </div>
+                    </button>
+                    <button data-tab="3">
+                        <div>New Products</div>
+                    </button>
+                    <button data-tab="4">
+                        <div>This Week</div>
+                    </button>
+                </div>
+
+
+
+                <div class="tabs-products my-mt-8">
+
+                    <!-- for chicken -->
+                    <div class="top-selling  my-grid-3 active my-gap-4 my-grid-sm-1" id="tab1">
+                        <!-- single card -->
+                        <div class="my-card product-cart">
+
+                            <a href="#" class="my-p-relative">
+                                <img src="./Static/images/food_01.jpg" alt="food">
+
+                                <!-- ****  Hide icons  ****-->
+                                <ul class="hide-icons my-d-flex my-gap-1 ">
+                                    <li class="hide-icon my-tooltip  my-flex-center">
+                                        <i class="fa-regular fa-eye"></i>
+                                        <div class="show-text">Quick View</div>
+                                    </li>
+                                    <li class="hide-icon my-tooltip my-flex-center">
+                                        <i class="fa-solid fa-code-compare"></i>
+                                        <div class="show-text">Complare Product</div>
+                                    </li>
+                                    <li class="hide-icon my-tooltip  my-flex-center">
+                                        <i class="fa-regular fa-heart"></i>
+                                        <div class="show-text">Add to love list</div>
+                                    </li>
+                                </ul>
+                            </a>
+
+                            <div>
+                                <a href="#">
+                                    <h4 class="my-mt-5 title">Chicken and Olive Pizza</h4>
+                                </a>
+                                <p class="">Food burgers are one of the most popular fast-food
+                                    items around the
+                                    world,
+                                </p>
+                            </div>
+
+                            <!-- Rating -->
+                            <div class="rating my-mt-4 my-d-flex my-align-center my-gap-4">
+                                <a href="#" class="starts">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </a>
+
+                                <div class="my-d-flex my-align-center my-gap-1">
+                                    <div class="avg">4.7</div>
+                                    <small>(21)</small>
+                                </div>
+                            </div>
+
+                            <!-- Price -->
+                            <div class="price my-d-flex my-align-center my-gap-4 my-mt-4">
+                                <h3 class="new-price"><i class="fa-solid fa-bangladeshi-taka-sign"></i>550</h3>
+                                <del class="old-price"><i class="fa-solid fa-bangladeshi-taka-sign"></i>590</del>
+                            </div>
+
+                            <!-- add to card -->
+                            <a class="my-btn my-primary-btn cart-btn" href="#"><span>+ Add To
+                                    Card</span>
+                            </a>
+                        </div>
+
+
+                    </div>
+
+                    <!-- for chicken -->
+                    <div class="top-rating  my-grid-3  my-gap-4 my-grid-sm-1" id="tab2">
+
+                        <!-- single card -->
+                        <div class="my-card product-cart">
+                            <a href="#" class="my-p-relative">
+                                <img src="./Static/images/food_04.jpg" alt="food">
+
+                                <!-- ****  Hide icons  ****-->
+                                <ul class="hide-icons my-d-flex my-gap-1 ">
+                                    <li class="hide-icon my-tooltip  my-flex-center">
+                                        <i class="fa-regular fa-eye"></i>
+                                        <div class="show-text">Quick View</div>
+                                    </li>
+                                    <li class="hide-icon my-tooltip my-flex-center">
+                                        <i class="fa-solid fa-code-compare"></i>
+                                        <div class="show-text">Complare Product</div>
+                                    </li>
+                                    <li class="hide-icon my-tooltip  my-flex-center">
+                                        <i class="fa-regular fa-heart"></i>
+                                        <div class="show-text">Add to love list</div>
+                                    </li>
+                                </ul>
+                            </a>
+
+                            <div>
+                                <a href="#">
+                                    <h4 class="my-mt-5 title">Chicken and Olive Pizza</h4>
+                                </a>
+                                <p>
+                                    Food burgers are one of the most popular fast-food items
+                                    around the world,
+                                </p>
+                            </div>
+
+                            <!-- Rating -->
+                            <div class="rating my-mt-4 my-d-flex my-align-center my-gap-4">
+                                <a href="#" class="starts">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </a>
+
+                                <div class="my-d-flex my-align-center my-gap-1">
+                                    <div class="avg">4.4</div>
+                                    <small>(12)</small>
+                                </div>
+                            </div>
+
+                            <!-- Price -->
+                            <div class="price my-d-flex my-align-center my-gap-4 my-mt-4">
+                                <h3 class="new-price"><i class="fa-solid fa-bangladeshi-taka-sign"></i>395</h3>
+                            </div>
+
+                            <!-- add to card -->
+                            <a class="my-btn my-primary-btn cart-btn" href="#"><span>+ Add To
+                                    Card</span></a>
+                        </div>
+
+
+
+                    </div>
+
+                    <!-- for burger -->
+                    <div class="new-products  my-grid-3 my-gap-4 my-grid-sm-1" id="tab3">
+                        <!-- single card -->
+                        <div class="my-card product-cart">
+                            <a href="#" class="my-p-relative">
+                                <img src="./Static/images/food_01.jpg" alt="food">
+
+                                <!-- ****  Hide icons  ****-->
+                                <ul class="hide-icons my-d-flex my-gap-1 ">
+                                    <li class="hide-icon my-tooltip  my-flex-center">
+                                        <i class="fa-regular fa-eye"></i>
+                                        <div class="show-text">Quick View</div>
+                                    </li>
+                                    <li class="hide-icon my-tooltip my-flex-center">
+                                        <i class="fa-solid fa-code-compare"></i>
+                                        <div class="show-text">Complare Product</div>
+                                    </li>
+                                    <li class="hide-icon my-tooltip  my-flex-center">
+                                        <i class="fa-regular fa-heart"></i>
+                                        <div class="show-text">Add to love list</div>
+                                    </li>
+                                </ul>
+                            </a>
+
+                            <div>
+                                <a href="#">
+                                    <h4 class="my-mt-5 title">Chicken and Olive Pizza</h4>
+                                </a>
+                                <p class="">Food burgers are one of the most popular fast-food
+                                    items around the
+                                    world,
+                                </p>
+                            </div>
+
+                            <!-- Rating -->
+                            <div class="rating my-mt-4 my-d-flex my-align-center my-gap-4">
+                                <a href="#" class="starts">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </a>
+
+                                <div class="my-d-flex my-align-center my-gap-1">
+                                    <div class="avg">4.7</div>
+                                    <small>(21)</small>
+                                </div>
+                            </div>
+
+                            <!-- Price -->
+                            <div class="price my-d-flex my-align-center my-gap-4 my-mt-4">
+                                <h3 class="new-price"><i class="fa-solid fa-bangladeshi-taka-sign"></i>550</h3>
+                                <del class="old-price"><i class="fa-solid fa-bangladeshi-taka-sign"></i>590</del>
+                            </div>
+
+                            <!-- add to card -->
+                            <a class="my-btn my-primary-btn cart-btn" href="#"><span>+ Add To
+                                    Card</span></a>
+                        </div>
+
+                        <!-- single card -->
+                        <div class="my-card product-cart">
+                            <a href="#" class="my-p-relative">
+                                <img src="./Static/images/food_02.jpg" alt="food">
+
+                                <!-- ****  Hide icons  ****-->
+                                <ul class="hide-icons my-d-flex my-gap-1 ">
+                                    <li class="hide-icon my-tooltip  my-flex-center">
+                                        <i class="fa-regular fa-eye"></i>
+                                        <div class="show-text">Quick View</div>
+                                    </li>
+                                    <li class="hide-icon my-tooltip my-flex-center">
+                                        <i class="fa-solid fa-code-compare"></i>
+                                        <div class="show-text">Complare Product</div>
+                                    </li>
+                                    <li class="hide-icon my-tooltip  my-flex-center">
+                                        <i class="fa-regular fa-heart"></i>
+                                        <div class="show-text">Add to love list</div>
+                                    </li>
+                                </ul>
+                            </a>
+
+                            <a href="#">
+                                <h4 class="my-mt-5 title">Chicken and Olive Pizza</h4>
+                            </a>
+                            <p class="">Food burgers are one of the most popular fast-food items
+                                around the world,
+                            </p>
+
+                            <!-- Rating -->
+                            <div class="rating my-mt-4 my-d-flex my-align-center my-gap-4">
+                                <a href="#" class="starts">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </a>
+
+                                <div class="my-d-flex my-align-center my-gap-1">
+                                    <div class="avg">4.8</div>
+                                    <small>(5)</small>
+                                </div>
+                            </div>
+
+                            <!-- Price -->
+                            <div class="price my-d-flex my-align-center my-gap-4 my-mt-4">
+                                <h3 class="new-price"><i class="fa-solid fa-bangladeshi-taka-sign"></i>460</h3>
+                                <del class="old-price"><i class="fa-solid fa-bangladeshi-taka-sign"></i>500</del>
+                            </div>
+
+                            <!-- add to card -->
+                            <a class="my-btn my-primary-btn cart-btn" href="#"><span>+ Add To
+                                    Card</span></a>
+                        </div>
+
+
+
+
+                    </div>
+
+                    <!-- this week -->
+                    <div class=" my-grid-3 my-gap-4 my-grid-sm-1" id="tab3">
+
+                    </div>
+                </div>
+            </div>
+
+
+
         </div>
 
         <script>
