popup design complete

--- a/Pages/product.html
+++ b/Pages/product.html
@@ -698,6 +698,49 @@
                 </div>
             </section>
 
+
+
+            <!-- Popup error sucess -->
+            <div class="my-popup  error my-card">
+                <div class="head my-text-center">
+                    <span class="icon my-flex-center"><i class="fa-solid fa-circle-check"></i></span>
+                </div>
+                <div class="content">
+
+                    <div class="my-text-center">
+                        <h4>Successful</h4>
+                        <p>your accound has been created.</p>
+                    </div>
+                </div>
+                <div class="my-text-right bottom my-w-100 my-border-top my-mt-3">
+                    <button class="my-btn my-btn-sm my-text-right my-primary-btn close-btn my-mt-4"><span>Close</span>
+                    </button>
+                </div>
+            </div>
+
+            <!-- Popup confirm -->
+            <div class="my-popup   my-card">
+                <div class="head my-text-center">
+                    <span class="icon my-flex-center"><i class="fa-solid fa-circle-check"></i></span>
+                </div>
+                <div class="content">
+
+                    <div class="my-text-center">
+                        <h4>Are You sure?</h4>
+                        <p>your accound has been created.</p>
+                    </div>
+                </div>
+                <div class="my-text-right bottom my-w-100 my-border-top my-mt-3">
+                    <button class="my-btn my-btn-sm my-text-right my-secendary-btn my-mr-2 my-mt-4"><span>Yes</span>
+                    </button>
+                    <button class="my-btn my-btn-sm my-text-right my-primary-btn close-btn my-mt-4"><span>Close</span>
+                    </button>
+                </div>
+            </div>
+
+
+
+
             <!-- ************************************ -->
             <!--         Product Details  Here          -->
             <!-- ************************************ -->
