--- a/test.html
+++ b/test.html
@@ -25,13 +25,13 @@
                 padding: 0;
             }
 
-            .cards.swiper {
+            .related-products.swiper {
                 width: 100%;
                 height: 100%;
                 max-height: 400px;
             }
 
-            .cards .swiper-slide {
+            .related-products .swiper-slide {
                 text-align: center;
                 font-size: 18px;
                 background: #fff;
@@ -40,7 +40,7 @@
                 align-items: center;
             }
 
-            .cards .swiper-slide img {
+            .related-products .swiper-slide img {
                 display: block;
                 width: 100%;
                 height: 100%;
@@ -52,7 +52,7 @@
 
     <body>
         <!-- Swiper -->
-        <div class="swiper cards mySwiper">
+        <div class="swiper related-products mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">Slide 1</div>
                 <div class="swiper-slide">Slide 2</div>
@@ -74,7 +74,7 @@
 
         <!-- Initialize Swiper -->
         <script>
-            var swiper = new Swiper(".cards", {
+            var swiper = new Swiper(".related-products", {
                 slidesPerView: 3, // Default for larger devices
                 spaceBetween: 30,
                 freeMode: true,
