tab slider added 3

--- a/test.html
+++ b/test.html
@@ -52,7 +52,7 @@
 
     <body>
         <!-- Swiper -->
-        <div class="swiper related-products mySwiper">
+        <div class="swiper related-products ">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">Slide 1</div>
                 <div class="swiper-slide">Slide 2</div>
