check out page 50% ok

--- a/Pages/invoice.html
+++ b/Pages/invoice.html
@@ -574,6 +574,7 @@
                         <table class="my-my-4 my-w-100">
                             <thead>
                                 <tr>
+                                    <th class="my-text-left">SL</th>
                                     <th class="my-text-left">Item Name</th>
                                     <th class="my-text-right">Quantity</th>
                                     <th class="my-text-right">Price</th>
@@ -582,6 +583,7 @@
 
                             <tbody>
                                 <tr>
+                                    <td class="my-text-left">1.</td>
                                     <td class="my-text-left">Burger sm</td>
                                     <td class="my-text-right">01</td>
                                     <td class="my-text-right">
@@ -589,6 +591,7 @@
                                     </td>
                                 </tr>
                                 <tr>
+                                    <td class="my-text-left">2.</td>
                                     <td class="my-text-left">Mojo 250ml</td>
                                     <td class="my-text-right">02</td>
                                     <td class="my-text-right">
@@ -596,6 +599,7 @@
                                     </td>
                                 </tr>
                                 <tr>
+                                    <td class="my-text-left">3.</td>
                                     <td class="my-text-left">sos</td>
                                     <td class="my-text-right">05</td>
                                     <td class="my-text-right">
@@ -603,6 +607,7 @@
                                     </td>
                                 </tr>
                                 <tr>
+                                    <td class="my-text-left">4.</td>
                                     <td class="my-text-left">pizza</td>
                                     <td class="my-text-right">01</td>
                                     <td class="my-text-right">
@@ -610,6 +615,7 @@
                                     </td>
                                 </tr>
                                 <tr>
+                                    <td class="my-text-left">5.</td>
                                     <td class="my-text-left">7up</td>
                                     <td class="my-text-right">02</td>
                                     <td class="my-text-right">
@@ -618,12 +624,14 @@
                                 </tr>
                                 <tr>
                                     <td class="my-text-left"></td>
+                                    <td class="my-text-left"></td>
                                     <td class="my-text-right my-fw-bold">Item Total: </td>
                                     <td class="my-text-right my-fw-bold">
                                         <i class="fa-solid fa-bangladeshi-taka-sign my-fs-xs"></i>232
                                     </td>
                                 </tr>
                                 <tr>
+                                    <td class="my-text-left"></td>
                                     <td class="my-text-left"></td>
                                     <td class="my-text-right my-fw-bold">Delivary Charge:</td>
                                     <td class="my-text-right my-fw-bold">
@@ -632,12 +640,14 @@
                                 </tr>
                                 <tr>
                                     <td class="my-text-left"></td>
+                                    <td class="my-text-left"></td>
                                     <td class="my-text-right my-fw-bold">Discount</td>
                                     <td class="my-text-right my-fw-bold">
                                         <i class="fa-solid fa-bangladeshi-taka-sign my-fs-xs"></i>00
                                     </td>
                                 </tr>
                                 <tr>
+                                    <td class="my-text-left"></td>
                                     <td class="my-text-left"></td>
                                     <td class="my-text-right my-fs-lg my-fw-bolder">Grand Total:</td>
                                     <td class="my-text-right my-fs-lg my-fw-bolder">
