login register and forget page done

--- a/Pages/checkout.html
+++ b/Pages/checkout.html
@@ -1631,7 +1631,6 @@
                     </div>
                 </div>
             </div>
-            </div>
 
             <!--_________  Footer Bottom  ________-->
             <div class="footer-bottom">
@@ -2006,11 +2005,13 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="footer my-flex-between">
                     <button class="my-btn my-primary-btn"><a href="index.html">Continue
                             Shopping</a></button>
                     <button class="my-secendary-btn my-btn"><span>Update
-                            Cart</span></button>
+                            Cart</span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -2069,10 +2070,10 @@
 
                         <!-- or -->
                         <div>
-                            <div class="border my-mt-4">
-                                -----------------------------
+                            <div class="border my-mt-4 my-flex-between">
+                                -------------------
                                 <span class="my-d-inline-block my-px-1">OR</span>
-                                ----------------------------
+                                -------------------
                             </div>
 
                             <div class="other-option my-flex-between my-mt-2">
