--- a/Pages/forgot.html
+++ b/Pages/forgot.html
@@ -9,7 +9,7 @@
             content="Online shopping, Affordable products, Best deals, Discount offers, Buy products online, Shop now, Order online, Top quality products, Fast delivery, Secure online shopping, Product bazaar">
         <link rel="stylesheet" href="../Static/Css/common.css">
         <link rel="stylesheet" href="../Static/Css/pages/checkout.css">
-        <title>Login_Page</title>
+        <title>Forgot_Page</title>
     </head>
 
     <body>
@@ -31,7 +31,7 @@
 
 
                         <div class="right">
-                            <h3 class="my-fw-bolder">Login</h3>
+                            <h3 class="my-fw-bolder">Forgot Passowrd</h3>
                         </div>
                     </div>
                 </div>
@@ -49,16 +49,18 @@
             <section class="section-margin">
                 <div class="my-container-sm">
                     <div class="area">
-                        <div class="my-grid-2 my-grid-sm-1  my-align-center my-gap-50">
+                        <div class="my-grid-2 my-align-center my-grid-sm-1 my-gap-50">
+
                             <!--*****  Image Area  ***** -->
                             <div class="left-image">
-                                <img src="../Static/images/login_image.svg" alt="">
+                                <img src="../Static/images/forgot.svg" alt="">
                             </div>
 
                             <div class="">
                                 <div>
-                                    <h2>Sign in to Shopping</h2>
-                                    <p>Welcome back to Shopping! Enter your email to get started.</p>
+                                    <h2>Forgot your password?</h2>
+                                    <p>Please enter the email address associated with your account and We will email you
+                                        a link to reset your password.</p>
                                 </div>
 
                                 <form action="#" class=" my-mt-10 my-radius-md my-flex-column my-gap-4">
@@ -66,60 +68,18 @@
                                         <label for="email" class="label">Email</label>
                                         <input type="email" id="email">
                                     </div>
-                                    <div class="my-input-control">
-                                        <label for="password" class="label">Password</label>
-                                        <input type="password" id="password">
-                                    </div>
-
-                                    <div class="my-flex-between">
-                                        <div class="my-d-flex my-align-center my-gap-2">
-                                            <input type="checkbox" id="remember">
-                                            <label for="remember">Remember me</label>
-                                        </div>
-                                        <p>
-                                            Forgot Password? <a class="my-text-primary my-fw-bold"
-                                                href="../Pages/forgot.html">Reset it.</a>
-                                        </p>
-                                    </div>
-
                                     <div>
                                         <button class="my-btn login-register-btn my-primary-btn my-w-100 ">
-                                            <span>Sign In</span>
+                                            <span>Reset Password</span>
                                         </button>
+                                    </div>
+                                    <div>
+                                        <a href="../Pages/login.html"
+                                            class="my-btn login-register-btn my-btn-outline my--btn my-w-100 ">
+                                            <span>Back</span>
+                                        </a>
                                     </div>
                                 </form>
-
-                                <!-- or -->
-                                <div>
-                                    <div class="border my-mt-10 my-flex-between">
-                                        -----------------------
-                                        <span class="my-d-inline-block my-px-1">OR</span>
-                                        -----------------------
-                                    </div>
-
-                                    <div class="other-option my-flex-between my-mt-2">
-                                        <!-- Google Login -->
-                                        <button class="my-btn my-btn-sm">
-                                            <span>Google <i class="fa-brands fa-google-plus-g"></i></span>
-                                        </button>
-                                        <!-- Google Login -->
-                                        <button class="my-btn my-btn-sm">
-                                            <span>Twitter <i class="fa-brands fa-twitter"></i></span>
-                                        </button>
-
-                                        <!-- Facebook Login -->
-                                        <button class="my-btn my-btn-sm">
-                                            <span>Facebook <i class="fa-brands fa-facebook"></i></span>
-                                        </button>
-                                    </div>
-
-                                    <div class="my-mt-2 my-text-right">
-                                        <p>Dont have account?
-                                            <a class="my-text-primary my-fw-bold" href="../Pages/register.html">Create
-                                                account</a>
-                                        </p>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
